--- a/de0nano_led/top.qsf
+++ b/de0nano_led/top.qsf
@@ -65,15 +65,17 @@ set_global_assignment -name VHDL_FILE top.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to cout[7]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to cout[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to cout[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to cout[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to cout[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to cout[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to cout[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to cout[0]
+set_instance_assignment -name IO_STANDARD "2.5 V" -to cout[7]
+set_instance_assignment -name IO_STANDARD "2.5 V" -to cout[6]
+set_instance_assignment -name IO_STANDARD "2.5 V" -to cout[5]
+set_instance_assignment -name IO_STANDARD "2.5 V" -to cout[4]
+set_instance_assignment -name IO_STANDARD "2.5 V" -to cout[3]
+set_instance_assignment -name IO_STANDARD "2.5 V" -to cout[2]
+set_instance_assignment -name IO_STANDARD "2.5 V" -to cout[1]
+set_instance_assignment -name IO_STANDARD "2.5 V" -to cout[0]
 
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
+set_instance_assignment -name IO_STANDARD "2.5 V" -to enable
+set_instance_assignment -name IO_STANDARD "2.5 V" -to reset
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
