--- a/oled_ssd1306_rpi/Cargo.toml
+++ b/oled_ssd1306_rpi/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+linux-embedded-hal = "0.3.1"
+embedded-graphics = "0.7.1"
+ssd1306 = "0.7.0"
